--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -6,6 +6,11 @@
             <div>
                 <h2 class="text-white pb-2 fw-bold">Заказы</h2>
             </div>
+            <div class="ml-md-auto py-2 py-md-0">
+                <a href="/cup/catalog/order/{{ order.uuid }}/invoice" class="btn btn-secondary">
+                    Инвойс
+                </a>
+            </div>
         </div>
     </div>
 {% endblock %}
