fix upload files with form

--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -48,11 +48,11 @@
                                         <td class="text-center">
                                             <form action="/cup/catalog/category/{{ category.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию?');">
                                                 <div class="btn-group">
-                                                    <a href="/cup/catalog/category/{{ category.uuid }}" class="btn btn-sm btn-info">
+                                                    <a href="/cup/catalog/category/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
                                                         <i class="fas fa-fw fa-sitemap"></i>
                                                         <span class="d-none d-md-inline-block">Подкатегории</span>
                                                     </a>
-                                                    <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-sm btn-info">
+                                                    <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
                                                         <i class="fas fa-fw fa-eye"></i>
                                                         <span class="d-none d-md-inline-block">Номенклатура</span>
                                                     </a>
