--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -57,7 +57,7 @@
                                         <td class="text-center">
                                             <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
                                                 <div class="btn-group">
-                                                    <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-sm btn-info">
+                                                    <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-sm btn-outline-info">
                                                         <i class="fas fa-fw fa-eye"></i>
                                                         <span class="d-none d-md-inline-block">Заявки</span>
                                                     </a>
