--- a/src/Template/cup/form/view/detail.twig
+++ b/src/Template/cup/form/view/detail.twig
@@ -27,20 +27,31 @@
                     <iframe src="/cup/form/{{ item.form_uuid }}/view/{{ item.uuid }}/preview" frameborder="0" style="width: 100%; min-height: 350px; overflow-y: scroll"></iframe>
 
                     <div class="row">
-                        {% for file in item.getFiles().sortBy('date') %}
+                        {% for file in item.getFiles() %}
                             <div class="col-sm-6 col-md-3">
                                 <a href="{{ file.getPublicPath() }}" class="d-block card card-stats card-round" target="_blank">
-                                    <div class="card-body ">
+                                    <div class="card-body">
                                         <div class="row align-items-center">
                                             <div class="col-icon">
                                                 <div class="icon-big text-center icon-primary bubble-shadow-small">
-                                                    <i class="flaticon-file"></i>
+                                                    {% if 'image/' in file.getType() %}
+                                                        <i class="far fa-file-image"></i>
+                                                    {% elseif 'text/' in file.getType() %}
+                                                        <i class="far fa-file-image"></i>
+                                                    {% elseif '/pdf' in file.getType() %}
+                                                        <i class="far fa-file-pdf"></i>
+                                                    {% elseif '/msword' in file.getType() or 'wordprocessingml' in file.getType() %}
+                                                        <i class="far fa-file-word"></i>
+                                                    {% elseif '/ms-excel' in file.getType() or 'spreadsheetml' in file.getType() %}
+                                                        <i class="far fa-file-excel"></i>
+                                                    {% else %}
+                                                        <i class="far fa-file"></i>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                             <div class="col col-8 col-stats ml-3 ml-sm-0">
                                                 <div class="numbers">
-                                                    <p class="card-category">{{ file.getName()|truncate(20) }}</p>
-                                                    <p class="card-category">{{ file.type }}</p>
+                                                    <p class="card-category">{{ file.getFileName()|truncate(20) }}</p>
                                                     <p class="card-category">{{ file.getFileSize() }}</p>
                                                 </div>
                                             </div>
