--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -1083,14 +1083,20 @@
                                                             {% if credentials.author_email %}
                                                                 <a href="mailto:{{ credentials.author_email }}">{{ credentials.author }}</a>
                                                             {% else %}
-                                                                {{ credentials.author }}
+                                                                {% for author in credentials.author|split(';') %}
+                                                                    {{ author|trim }}<br>
+                                                                {% endfor %}
                                                             {% endif %}
                                                         </dd>
                                                     </d1>
                                                     {% if credentials.author_site %}
                                                         <d1>
                                                             <dt>Сайт</dt>
-                                                            <dd><a href="{{ credentials.author_site }}" target="_blank">{{ credentials.author_site }}</a></dd>
+                                                            <dd>
+                                                                {% for link in credentials.author_site|split(';') %}
+                                                                    <a href="{{ link|trim }}" target="_blank">{{ link|trim }}</a><br>
+                                                                {% endfor %}
+                                                            </dd>
                                                         </d1>
                                                     {% endif %}
                                                     {% if credentials.description %}
