--- a/theme/default/publication.short.twig
+++ b/theme/default/publication.short.twig
@@ -6,7 +6,7 @@
         <div>
             <ul class="meta">
                 <li><a href="/{{ category.address }}">{{ category.title }}</a></li>
-                <li>{{ item.date|df }}</a></li>
+                <li>{{ item.date|df }}</li>
                 <li>{{ item.user.getName('short') }}</li>
             </ul>
         </div>
