--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -9,7 +9,7 @@
     <link href="/default/img/favicon.ico" rel="shortcut icon" />
 
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    {% resource 'bootstrap.min.css' '4.2.1' %}
+    {% resource 'twitter-bootstrap:bootstrap.min.css' '4.2.1' %}
     <link rel="stylesheet" href="/default/css/style.css">
 
     <!--[if lt IE 9]>
@@ -65,7 +65,7 @@
 
         {% resource 'jquery.min.js' '3.2.1' %}
         {% resource 'jquery-ui.min.js' '1.12.1' %}
-        {% resource 'bootstrap.min.js' '4.2.1' %}
+        {% resource 'twitter-bootstrap:bootstrap.min.js' '4.2.1' %}
         {% resource 'owl.carousel.min.js' '2.3.4' %}
         {% resource 'slicknav.min.js' '1.0.10' %}
         {% resource 'nicescroll.min.js' '3.7.6' %}
