--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -15,63 +15,115 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    <div class="d-flex align-items-center">
+                    <div class="card-head-row">
                         <h4 class="card-title">Список заказов ({{ orders.count() }})</h4>
-                        <a href="/cup/catalog/order/add" class="btn btn-primary btn-round ml-auto">
-                            <i class="fa fa-plus"></i>
-                            Добавить заказ
-                        </a>
+
+                        <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="pill" href="#invoice" role="tab">
+                                    Шаблон инвойса
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active show" data-toggle="pill" href="#list" role="tab">
+                                    Список
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="/cup/catalog/order/add" class="nav-link bg-primary text-white">
+                                    <i class="fa fa-plus"></i>
+                                    Добавить заказ
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
-                                <tr>
-                                    <th width="10%">№ Заказа</th>
-                                    <th>Клиент</th>
-                                    <th width="10%">Статус</th>
-                                    <th width="15%">Дата добавления</th>
-                                    <th width="15%" class="text-center no-sorting"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in orders %}
+                    <div class="tab-content">
+                        {# Tab: Шаблон инвойса #}
+                        <div class="tab-pane fade" id="invoice" role="tabpanel">
+                            <form action="/cup/parameters?return=/cup/catalog/order" method="post">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <style>
+                                            #invoice .fr-toolbar {
+                                                display: none;
+                                            }
+                                            #invoice .fr-wrapper,
+                                            #invoice .fr-wrapper .CodeMirror-wrap {
+                                                height: 500px!important;
+                                                width: 100%;
+                                            }
+                                        </style>
+
+                                        {% include 'cup/editor.twig' with {
+                                            'name': 'catalog[invoice]',
+                                            'args': {
+                                                'id': 'code',
+                                                'text_mode': true,
+                                                'value': parameter('catalog_invoice', invoice),
+                                            }
+                                        } %}
+
+                                        <button type="submit" class="btn btn-success mt-3">Сохранить</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+
+                        {# Tab: Список #}
+                        <div class="tab-pane fade show active" id="list" role="tabpanel">
+                            <div class="table-responsive">
+                                <table data-table class="table table-striped table-hover" style="width: 100%;">
+                                    <thead>
                                     <tr>
-                                        <td data-order="{{ item.external_id ? item.external_id : item.date.getTimestamp() }}">
-                                            {% if item.external_id %}
-                                                {{ item.external_id }} ({{ item.serial }})
-                                            {% else %}
-                                                {{ item.serial }}
-                                            {% endif %}
-                                        </td>
-                                        <td>{{ item.user and item.user.getName() ? item.user.getName() : item.delivery.client }}</td>
-                                        <td>
-                                            <span class="badge badge-secondary">{{ item.status }}</span>
-                                        </td>
-                                        <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i') }}</td>
-                                        <td class="text-center">
-                                            <form action="/cup/catalog/order/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить заказ?');">
-                                                <div class="btn-group">
-                                                    <a href="/cup/catalog/order/{{ item.uuid }}/invoice" class="btn btn-sm btn-outline-info">
-                                                        <i class="fas fa-file-invoice"></i>
-                                                        <span class="d-none d-md-inline-block">Инвойс</span>
-                                                    </a>
-                                                    <a href="/cup/catalog/order/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
-                                                        <i class="fas fa-fw fa-edit"></i>
-                                                        <span class="d-none d-md-inline-block">Изменить</span>
-                                                    </a>
-                                                    <button type="submit" class="btn btn-sm btn-danger">
-                                                        <i class="fas fa-fw fa-trash-alt"></i>
-                                                        <span class="d-none d-md-inline-block">Удалить</span>
-                                                    </button>
-                                                </div>
-                                            </form>
-                                        </td>
+                                        <th width="10%">№ Заказа</th>
+                                        <th>Клиент</th>
+                                        <th width="10%">Статус</th>
+                                        <th width="15%">Дата добавления</th>
+                                        <th width="15%" class="text-center no-sorting"></th>
                                     </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
+                                    </thead>
+                                    <tbody>
+                                    {% for item in orders %}
+                                        <tr>
+                                            <td data-order="{{ item.external_id ? item.external_id : item.date.getTimestamp() }}">
+                                                {% if item.external_id %}
+                                                    {{ item.external_id }} ({{ item.serial }})
+                                                {% else %}
+                                                    {{ item.serial }}
+                                                {% endif %}
+                                            </td>
+                                            <td>{{ item.user and item.user.getName() ? item.user.getName() : item.delivery.client }}</td>
+                                            <td>
+                                                <span class="badge badge-secondary">{{ item.status }}</span>
+                                            </td>
+                                            <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i') }}</td>
+                                            <td class="text-center">
+                                                <form action="/cup/catalog/order/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить заказ?');">
+                                                    <div class="btn-group">
+                                                        <a href="/cup/catalog/order/{{ item.uuid }}/invoice" class="btn btn-sm btn-outline-info">
+                                                            <i class="fas fa-file-invoice"></i>
+                                                            <span class="d-none d-md-inline-block">Инвойс</span>
+                                                        </a>
+                                                        <a href="/cup/catalog/order/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                            <i class="fas fa-fw fa-edit"></i>
+                                                            <span class="d-none d-md-inline-block">Изменить</span>
+                                                        </a>
+                                                        <button type="submit" class="btn btn-sm btn-danger">
+                                                            <i class="fas fa-fw fa-trash-alt"></i>
+                                                            <span class="d-none d-md-inline-block">Удалить</span>
+                                                        </button>
+                                                    </div>
+                                                </form>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
