--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/css/datatables.min.css?v={{ sha }}">
     <link rel="stylesheet" href="/assets/js/plugin/jquery.modal/jquery.modal.min.css?v={{ sha }}">
     <link rel="stylesheet" href="/assets/css/atlantis.css?v={{ sha }}">
+    <meta name="theme-color" content="#1572e8">
 {% endblock %}
 
 {% block body %}
