change invoice bnt label

--- a/src/Template/cup/catalog/order/invoice.twig
+++ b/src/Template/cup/catalog/order/invoice.twig
@@ -13,7 +13,7 @@
                     Печать
                 </a>
                 <a href="/cup/catalog/order/{{ order.uuid }}/edit" class="btn btn-secondary">
-                    Редактировать
+                    Изменить заказ
                 </a>
             </div>
         </div>
