--- a/theme/default/search.twig
+++ b/theme/default/search.twig
@@ -9,6 +9,21 @@
                 <div class="row">
                     <div class="col-12 col-md-8 offset-md-2">
                         {% include 'mixin/form.twig' with {
+                            'type': 'select',
+                            'name': 't',
+                            'args': {
+                                'selected': _request.t,
+                                'option': {
+                                    '': 'Везде',
+                                    'page': 'Страницы',
+                                    'publication': 'Публикации',
+                                    'catalog_product': 'Товары'
+                                },
+                                'class': ['form-control'],
+                            }
+                        } %}
+
+                        {% include 'mixin/form.twig' with {
                             'type': 'text',
                             'name': 'q',
                             'args': {
