--- a/src/Template/errors/p405.twig
+++ b/src/Template/errors/p405.twig
@@ -1,3 +1,6 @@
-<b>Not allowed</b>
-<pre>{{ methods.implode(' ') }}</pre>
+{% extends 'layout.twig' %}
 
+{% block body %}
+    <b>Not allowed</b>
+    <pre>{{ methods.implode(' ') }}</pre>
+{% endblock %}
