--- a/src/Template/errors/p500.twig
+++ b/src/Template/errors/p500.twig
@@ -1,2 +1,6 @@
-<b>{{ exception.getMessage() }}</b>
-<pre>{{ exception.getTraceAsString() }}</pre>
+{% extends 'layout.twig' %}
+
+{% block body %}
+    <b>{{ exception.getMessage() }}</b>
+    <pre>{{ exception.getTraceAsString() }}</pre>
+{% endblock %}
